--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "hooper": "^0.3.4",
     "vue": "^2.6.14",
-    "vue-responsive": "^1.3.1"
+    "vue-responsive": "^1.3.1",
+    "vue-router": "^3.6.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
